scripts/kube/app/svc-authors-blue.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: authors
  name: svc-authors-blue
  namespace: workshop
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 3000
  selector:
    app: authors-blue
  type: ClusterIP
