scripts/kube/app/ing-authors.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: authors-ingress
  namespace: workshop
spec:
  rules:
  - host: authors.mkube
    http:
      paths:
      - path: /
        backend:
          serviceName: svc-authors
          servicePort: 8080
